# arcllm

./: .gitignore  BOOTSTRAP.md  CLAUDE.md  README.md  env.sglang-xpu.sh  env.xpu.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
api/: router.py  worker.py
arc-tools/: AGENT_BRIEFS.md  CLAUDE.md  docker-compose.yml  init-db.sh  init.sql
arc-tools/grabber/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt  temporal_activities.py  temporal_activities_v2.py  temporal_worker.py  temporal_workflows.py  temporal_workflows_v2.py
arc-tools/grabber/.docker/: fleet_key
arc-tools/grabber/app/: main.py
arc-tools/grabber/app/core/: __init__.py  config.py  state_machine.py
arc-tools/grabber/app/db/: __init__.py  client.py  queries.py
arc-tools/grabber/app/db/migrations/: 014_grab_status.sql
arc-tools/grabber/app/recipes/: __init__.py  application_generator.py  company_intel.py  dossier_builder.py
arc-tools/grabber/app/routers/: api_keys.py  applications.py  dashboard.py  entities.py  jobs.py  patterns.py  projects.py  tasks.py
arc-tools/grabber/app/services/: __init__.py  job_service.py  sync_service.py
arc-tools/grabber/data/: us_zipcodes.csv
arc-tools/grabber/data/job_guides/: api_reference.md  wedding_venues.md
arc-tools/grabber/data/recipes/: bing_maps_overlay.json  bing_maps_overlay.md
arc-tools/grabber/docs/: AGENTS_API_PLAYBOOK.md  JOB_SCHEMA_AND_UPLOAD_GUIDE.md
arcllm/: cli.py
completions/: _arcllm  arcllm.bash
config/: arcllm.service  config.env.example  nemotron_120b_optimal.env
docs/: BOOTSTRAP-CORRECTIONS.md  BOOTSTRAP.md  CONTEXT-BUDGET.md  DEVELOPMENT.md  EXPERIMENTS.md  FLAGSHIP.md  MINIMAX-LOG.md  PROMPT-CACHE.md  QWEN35-35B.md  TESTING.md
(+150 files in other folders)
